objects/Sales_Organization__c.object
<CustomObject>
    <description>Lookup Object</description>
    <fields>
        <fullName>Code__c</fullName>
        <externalId>true</externalId>
        <label>Code</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Code_Value__c</fullName>
        <formula>Company_Code__r.Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company Code Value</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company Code</label>
        <referenceTo>Company_Code__c</referenceTo>
        <relationshipLabel>Sales Organizations</relationshipLabel>
        <relationshipName>Sales_Organizations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Sales Organization</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Code__c</columns>
        <columns>Company_Code__c</columns>
        <columns>Company_Code_Value__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Sales Organization</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Organizations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>